k8s/backend/overlays/productie/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: energytruth-backend
spec:
  replicas: 2
