k8s/backend/overlays/productie/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.energy-truth.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-energytruth-backend-service
            port:
              number: 80
